--- a/css/estilos.css
+++ b/css/estilos.css
@@ -118,7 +118,7 @@
 	padding-bottom:10pk
 }
 
-/*Subilista de camissas vai estar escondida e quando o usuario
+/*Subilista de camisas vai estar escondida e quando o usuario
   passar o mouse ela vai ser exibida*/
 .menu-departamentos li ul{
 	display:none;
