--- a/css/estilos.css
+++ b/css/estilos.css
@@ -90,7 +90,7 @@
 }
 
 .menu-departamentos a{
-	color:#333333;
+	color:#686666;
 	text-decoration:none;
 }
 
@@ -252,4 +252,51 @@ footer{
 
 footer .container{
 	position:relative;
+}
+
+/*Tamanhos mobile*/
+@media(max-width: 940px){
+	.container{
+		width: 96%;
+	}
+
+	header h1{
+		text-align: center;
+	}
+
+	header h1 img{
+		max-width: 50%;
+	}
+
+	.sacola{
+		display: none;
+	}
+
+	.menu-opcoes{
+		position: static;
+		text-align: center;
+	}
+
+	.menu-opcoes ul li{
+		display: inline-block;
+		margin: 5px;
+	}
+
+	.busca, .menu-departamentos, 
+	.banner-destaque img{
+		margin-right: 0;
+		width: 100%;
+	}
+
+	.painel{
+		width: auto;
+	}
+
+	.painel li{
+		width: 30%;
+	}
+
+	.painel img{
+		width: 100%;
+	}
 }
