--- a/css/estilos.css
+++ b/css/estilos.css
@@ -255,7 +255,7 @@ footer .container{
 }
 
 /*Tamanhos mobile*/
-@media(max-width: 940px){
+@media (max-width: 414px){
 	.container{
 		width: 96%;
 	}
@@ -298,5 +298,55 @@ footer .container{
 
 	.painel img{
 		width: 100%;
+	}
+
+}
+
+@media (max-width: 939px){
+
+	@media (min-width: 480px){
+		header h1{
+			margin: 5px 0;		
+		}
+
+		.menu-departamentos{
+			padding-bottom: 10px;
+			margin-bottom: 10px;
+		}
+
+		.menu-departamentos nav > ul{
+			column-count: 1;
+		}
+	}
+
+	@media (min-width: 720px){
+		header h1{
+			text-align: left;
+		}
+
+		.menu-opcoes{
+			position: absolute;
+		}
+
+		.sacola{
+			display: block;
+		}
+
+		.painel li{
+			width: 15%;
+		}
+
+		.busca, .menu-departamentos{
+			margin-right: 1%;
+			width: 30%;
+		}
+
+		.menu-departamentos nav > ul{
+			column-count: 1;
+		}
+
+		.banner-destaque img{
+			width: 69%;
+		}
 	}
 }
