--- a/css/estilos.css
+++ b/css/estilos.css
@@ -254,7 +254,7 @@ footer .container{
 	position:relative;
 }
 
-/*Tamanhos mobile*/
+/*mobile*/
 @media (max-width: 414px){
 	.container{
 		width: 96%;
