--- a/css/estilos.css
+++ b/css/estilos.css
@@ -254,6 +254,10 @@ footer .container{
 	position:relative;
 }
 
+/*********Checkout*********/
+
+
+
 /*mobile*/
 @media (max-width: 414px){
 	.container{
