--- a/css/produto.css
+++ b/css/produto.css
@@ -150,7 +150,16 @@ tr:nth-child(2n){
     background-color: #cccccc;    
 }
 
-/**/
+.tamanhos output{
+    display: inline-block;
+    height: 44px;
+    width: 44px;
+    line-height: 44px;
+    text-align: center;
+    border: 3px solid #666666;
+    border-radius: 50%;
+    color: #555555;
+}
 
 
 
