--- a/css/estilos.css
+++ b/css/estilos.css
@@ -230,6 +230,54 @@
 	display: inline-block;
 }
 
+.painel button{
+	/*posicionamento*/
+	float: right;
+	margin-right: 10px;
+	padding: 10px;
+	position: relative;
+	margin-bottom: 10px;
+	/*estilo*/
+	background-color: #333333;
+	border: 0;
+	border-radius: 4px;
+	box-shadow: 1px 1px 3px rgba(30, 30, 30, 0.5);
+	color: #ffffff;
+	font-size: 1em;
+	text-decoration: none;
+	text-shadow: 1px 0 1px #000000;
+	/*animação*/
+	transition: 0.3s;
+}
+
+.painel button:hover{
+	background-color: #393939;
+	box-shadow: 1px 0 20px rgba(200, 200, 120, 0.9);
+}
+
+.painel button::after{
+	/*elemento vazio*/
+	content:'';
+	display: block;
+	height: 0;
+	width: 0;
+	/*triangulo*/
+	/*border-top: 10px solid #333333;
+	border-left: 10px solid transparent;
+	border-right: 10px solid transparent;*/
+	/*posicionamento*/
+	position: absolute;
+	top: 100%;
+	left: 50%;
+	margin-left: -5px;
+	/*animação*/
+	transition: 0.3s;
+}
+
+.painel button:hover::after{
+	border-top-color: #393939;
+}
+
 /*Parte referente ao rodapé*/
 .social{
 	position:absolute;
