Embedando video, mapas e inserindo fontes fonts

--- a/css/estilos.css
+++ b/css/estilos.css
@@ -6,7 +6,7 @@ header{
 
 body{
 	color:#333333;
-	font-family:"Lucida Sans Unicode", "Lucida Grande", sans-serif;
+	font-family: 'Noto Sans HK', sans-serif;
 }
 
 footer{
@@ -229,6 +229,7 @@ footer .container{
 	text-transform:uppercase;
 	margin-bottom:10px;
 	text-shadow: 3px 3px 2px rgba(255, 255, 255, 0.8);
+	font-family: 'Noto Sans HK', sans-serif;
 }
 
 .painel a{
