--- a/css/produto.css
+++ b/css/produto.css
@@ -1,4 +1,7 @@
 /*CSS Document*/
+body{
+  font-family: 'Noto Sans HK', sans-serif;
+}
 
 .produto-back{
     background-color: #f2f2f2;
@@ -11,6 +14,7 @@
     color: #333333;
     line-height: 1.3;
     margin-top: 2em;
+    font-family: 'Noto Sans HK', sans-serif;
 }
 
 .produto h1{
@@ -27,7 +31,8 @@
 .produto legend{
     display: block;
     font: bold 0.9em/2.5 Arial;
-    text-transform: uppercase;    
+    text-transform: uppercase;
+    font-family: 'Noto Sans HK', sans-serif;    
 }
 
 /*implementando funcionalidade das cores do produto*/
@@ -104,11 +109,13 @@ label[for=azul]::after{
     display: block;
     padding: 0.5em 1em;
     margin: 1em 0;
+    font-family: 'Noto Sans HK', sans-serif;
 }
 
 /*detalhes e caracteristica do produto*/
 .detalhes{
     padding: 2em 0;
+    font-family: 'Noto Sans HK', sans-serif;
 }
 
 .detalhes h2{
