--- a/css/estilos.css
+++ b/css/estilos.css
@@ -154,27 +154,27 @@ footer .container{
 	margin:10px;
 }
 
-/*Botão play e pause banner destaque
-.pause{
-	border-left: 10px solid #900900;
-	border-right: 10px solid  #900900;
-	height: 30px;
-	width: 5px;
-}
-
-.play{
-	border-left: 25px solid #900900;
-	border-bottom: 15px solid transparent;
-	border-top: 15px solid transparent;
-}
-
-.pause, .play{
+/*Botão play e pause banner destaque*/
+.pause,.play {
 	display: block;
 	position: absolute;
 	right: 15px;
 	top: 15px;
 }
-*/
+
+.pause {
+	border-left: 10px solid #900;
+	border-right: 10px solid #900;
+	height: 30px;
+	width: 5px;
+}
+
+.play {
+	border-left: 25px solid #900;
+	border-bottom: 15px solid transparent;
+	border-top: 15px solid transparent;
+}
+
 
 /*Parte referente a Painel de novidades e mais vendidos*/
 .novidades{
@@ -283,9 +283,9 @@ footer .container{
 	height: 0;
 	width: 0;
 	/*triangulo*/
-	/*border-top: 10px solid #333333;
+	border-top: 10px solid #333333;
 	border-left: 10px solid transparent;
-	border-right: 10px solid transparent;*/
+	border-right: 10px solid transparent;
 	/*posicionamento*/
 	position: absolute;
 	top: 100%;
